<resources>
    <string name="app_name">Dice Roller 9000</string>
    <string name="roll_the_dice">ROLL THE DICE</string>
    <string name="settings">Settings</string>
    <string name="success">✓</string>
    <string name="failure">✗</string>
    <string name="ndx">nDx</string>
    <string name="results">Results</string>
    <string name="dice_notation">%1$dD%2$d</string>
    <string name="dice_notation_target_number">%1$dD%2$d>%3$d</string>
    <string name="empty" />
    <string name="number_of_dice">Number of dice</string>
    <string name="type_of_dice">Type of dice</string>
    <string name="target_number">Target number</string>
    <string name="target_number_mode">Target number mode disabled</string>
    <string name="settings_applied">Changes to settings applied</string>
    <string name="settings_discarded">Changes to settings discarded</string>
    <string name="history_back">History back</string>
    <string name="history_forward">History forward</string>

    <plurals name="successes">
        <item quantity="one">%d SUCCESS</item>
        <item quantity="other">%d SUCCESSES</item>
    </plurals>
</resources>
